# iseal-core

./: .gitignore  README-dev.md  README.md  documentation.html  fsc.ttl  idds.ttl  idss application profile.ipynb  index.html  index.xml  pyproject.toml  requirements.txt  sitemap.xml
categories/: index.xml
certificate-ownership-type/: certificate-ownership-type.txt
certificate-type/: certificate-type.txt
certification-certificate-code-number-or-id/: index.html
certification-certificate-coverage-type/: index.html
certification-certificate-current-duration/: index.html
certification-certificate-current-end-date/: index.html
certification-certificate-current-start-date/: index.html
certification-certificate-first-issue-date/: index.html
certification-certificate-holder-owner-or-certified-organization-city/: index.html
certification-certificate-holder-owner-or-certified-organization-country/: index.html
certification-certificate-holder-owner-or-certified-organization-email-address/: index.html
certification-certificate-holder-owner-or-certified-organization-gln/: index.html
certification-certificate-holder-owner-or-certified-organization-id/: index.html
certification-certificate-holder-owner-or-certified-organization-latitude-and-longitude-location-coordinates/: index.html
certification-certificate-holder-owner-or-certified-organization-latitude-location-coordinate/: index.html
certification-certificate-holder-owner-or-certified-organization-longitude-location-coordinate/: index.html
certification-certificate-holder-owner-or-certified-organization-name/: index.html
certification-certificate-holder-owner-or-certified-organization-phone-country-code/: index.html
certification-certificate-holder-owner-or-certified-organization-phone-number/: index.html
certification-certificate-holder-owner-or-certified-organization-postcode/: index.html
certification-certificate-license-code/: index.html
data/: fsc.csv  (+3 more)
(+1582 files in other folders)
