[tool.poetry]
name = "iseal-schema"
version = "0.1.0"
description = "Workflow to process ISEAL schema Excel into RDF and user-facing specification."
authors = ["Alan Orth <aorth@mjanja.ch>", "Marie-Angelique Laporte <m.a.laporte@cgiar.org>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
# Explicitly install pylode, which installs rdflib. If we install rdflib first
# there is currently some kind of dependency issue due to version conflicts.
pylode = "^2.12.0"
isort = "^5.9.3"
black = "^21.9b0"
openpyxl = "^3.0.9"
ipykernel = "^6.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
