[tool.poetry]
name = "iseal-core"
version = "0.1.0"
description = "Workflow to process ISEAL schema Excel into RDF and user-facing specification."
authors = ["Alan Orth <aorth@mjanja.ch>", "Marie-Angelique Laporte <m.a.laporte@cgiar.org>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
ipykernel = "^6.4.2"
rdflib = "^6.0.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.9b0"
csvkit = "^1.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
